Integrating IVY for dependency management and also adding support to release this in Maven repo

--- a/bldfiles/ant.properties
+++ b/bldfiles/ant.properties
@@ -2,11 +2,12 @@
 # MANIFEST and JAR properties - Make sure you change these to your settings.
 #-----------------------------------------------------------------------
 
-name		   = channelmgr
+name		   = channelmanager
 			#used as the jar file name(ie. ${name}.jar)
 			#used as zip file name(ie. ${name}-version.jar)
 			#used as the directory staging name
 			#version info may be retrieved using java -jar ${name}.jar -version
+version		   = 2.1.11
 
 max.errors=40
 			#specifies the number of errors or warnings that checkstyle can have before 
