--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="tools/ant-junit/junit.jar"/>
 	<classpathentry kind="lib" path="input/libexclude/platform-api.jar"/>
 	<classpathentry kind="lib" path="input/libexclude/mocklib.jar"/>
+	<classpathentry kind="lib" path="output/jardist/build/slf4j-api-jar-1.6.4.jar"/>
 	<classpathentry kind="output" path="eclipsegen"/>
 </classpath>
